# Projects

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cmake_tutorials
.cmake/api/v1/reply/: cache-v2-57bed450b819d9a174c1.json  cmakeFiles-v1-ac84568f703c0bec4e9c.json  codemodel-v2-37e248db90fad5479680.json  index-2024-11-17T03-43-11-0677.json  target-cmake_tutorials-Debug-184bcb10fd50ae67d17d.json  target-library1-Debug-f3f2ac32bceee9255cf5.json  target-printer-Debug-156541f2d405abcc270a.json
Scripting/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: file1.h  printer.h
src/: file1.cpp  main.cpp  printer.cpp
test/: CMakeLists.txt  Makefile  cmake_install.cmake
